# DriftProtocol

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  mkdocs.yml  setup.py
.github/actions/download-protoc/: action.yml
.github/actions/install-pkg/: action.yml
.github/workflows/: ci.yml
cmake/: ProtobufGen.cmake
cpp/: CMakeLists.txt  README.md  conanfile.py  linux_armv8
cpp/cmake/: ProtobufGen.cmake
cpp/example/: CMakeLists.txt  conanfile.txt  main.cc  payload_with_image_example.cc  payload_with_scalars.cc  payload_with_timeseries_example.cc
cpp/examples/: CMakeLists.txt  conanfile.txt  payload_with_image_example.cc  payload_with_scalars.cc  payload_with_timeseries_example.cc  payload_with_typedata.cc  trigger_message_example.cc
cpp/test_package/: CMakeLists.txt  conanfile.py  drift_package_example.cc
docs/: dependencies.md  requirements.txt  use_cases.md
docs/api/: common.md  meta.md  triggering.md
docs/cpp_examples/: drift_package_example.md  payload_with_image_example.md  payload_with_scalars_example.md  payload_with_timeseries_example.md  payload_with_typed_data_example.md  trigger_message_example.md
docs/py_examples/: drift_package_example.md  payload_with_image_example.md  payload_with_scalars_example.md  payload_with_timeseries_example.md  payload_with_typed_data_example.md  trigger_message_example.md
pkg/drift_protocol/: __init__.py.in
proto_specs/drift_protocol/alignment_service/: aligned_package.proto
proto_specs/drift_protocol/common/: data_payload.proto  drift_package.proto  status_code.proto
proto_specs/drift_protocol/meta/: meta_info.proto
proto_specs/drift_protocol/trigger_service/: interval_trigger_message.proto  trigger_message.proto
python/: README.md  extra_requirements.txt  pyproject.toml  setup.py
python/examples/: drift_package_example.py  payload_with_image_example.py  payload_with_scalars.py  payload_with_timeseries_example.py  payload_with_typedata.py  requirements.txt  trigger_message_example.py
python/pkg/drift_protocol/: __init__.py.in
python/pkg/drift_protocol/easy/: __init__.py  package.py  trigger.py
python/python_tools/: __init__.py  generator.py
python/tests/: test_generate.py  test_package.py
python/tests/easy/: test_package.py  test_trigger.py
python_tools/: __init__.py  generator.py
requirements/: prod.txt  test.txt
tests/: test_generate.py  test_package.py
